--- a/Resources/CSS/FeedBack.css
+++ b/Resources/CSS/FeedBack.css
@@ -21,12 +21,12 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 30px;
-    background-color: #fff;
+    background-color: #333;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
     .form h3 {
-        color: #333;
+        color: #fff;
         font-size: 24px;
         margin-bottom: 20px;
     }
@@ -37,23 +37,25 @@
 
     .form-group label {
         display: block;
-        color: #666;
+        color: #fff;
         font-size: 18px;
         margin-bottom: 10px;
     }
 
     .form-group input,
     .form-group textarea {
-        width: 100%;
+        width: 85%;
         padding: 10px;
         border: 2px solid #ddd;
         border-radius: 4px;
         font-size: 16px;
-        color: #333;
+        color: #fff;
     }
 
-        .form-group input:focus,
-        .form-group textarea:focus {
+    .form-group textarea {
+        height: 100px;
+    }
+        .form-group input:focus, .form-group textarea:focus {
             border-color: #f79a3e;
             outline: none;
         }
@@ -62,9 +64,11 @@
     display: inline-block;
     position: relative;
     height: 20px;
+    width: 70%;
     line-height: 20px;
     font-size: 20px;
     color: #ec7813;
+    text-align:center;
 }
 
     .rating input {
@@ -74,7 +78,7 @@
     .rating label {
         display: inline-block;
         position: relative;
-        width: 20px;
+        width: 70px;
         height: 20px;
         text-align: center;
         cursor: pointer;
@@ -97,7 +101,7 @@
     display: block;
     margin-top: 30px;
     padding: 10px 20px;
-    background-color: #ec7813;
+    background-color: #fd6d0a;
     color: #fff;
     font-size: 18px;
     font-weight: bold;
@@ -108,7 +112,8 @@
 }
 
     .ss_button:hover {
-        background-color: ##ff7700;
+        background-color: #fff;
+        color: #fd6d0a;
     }
 
     .ss_button:active {
