Implement signup/signin functionality

--- a/MyMaster1.Master
+++ b/MyMaster1.Master
@@ -15,7 +15,7 @@
 
 <body>
     
-      <form runat="server"> 
+      <%--<form runat="server">--%> 
 <%-------------------------------------------------------------------------------------------------%> 
 
                  <header>
@@ -114,7 +114,7 @@
     
 <%-------------------------------------------------------------------------------------------------%> 
 
-         </form>
+         <%--</form>--%>
 
     </body>
 </html>
