--- a/Resources/CSS/ContactUs.css
+++ b/Resources/CSS/ContactUs.css
@@ -9,6 +9,10 @@
     font-family: 'Roboto', sans-serif;
     background-color: #333;
     color: #fff;
+    width:100%;
+    height:100%;
+    margin-top:-20px;
+    margin-bottom:-20px;
 }
 
 .container {
