--- a/Resources/CSS/MyProfile.css
+++ b/Resources/CSS/MyProfile.css
@@ -95,26 +95,22 @@ ul {
 }
 
 /* Set job and education section style */
-.job,
-.education {
+.job{
     margin-bottom: 20px;
 }
 
-    .job h4,
-    .education h4 {
+    .job h4{
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 5px;
     }
 
-    .job h5,
-    .education h5 {
+    .job h5{
         font-size: 16px;
         margin-bottom: 5px;
     }
 
-    .job ul,
-    .education p {
+    .job ul{
         margin-bottom: 10px;
     }
 
@@ -123,6 +119,16 @@ hr {
     border: none;
     border-top: 2px solid #ccc;
     margin: 30px 0;
+}
+
+#Expertise li {
+    display: inline-block;
+    background-color: #eee;
+    color: #333;
+    border-radius: 20px;
+    padding: 5px 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 #skills li {
@@ -134,49 +140,6 @@ hr {
     margin-right: 10px;
     margin-bottom: 10px;
 }
-
-.Skill_dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.Skill_dropdown-content {
-    display: none;
-    position: absolute;
-    top: 30px;
-    background-color: #222;
-    color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-    .Skill_dropdown-content a {
-        display: block;
-        padding: 10px;
-        text-decoration: none;
-        color: #fff;
-        transition: background-color 0.2s ease-in-out;
-    }
-
-        .Skill_dropdown-content a:hover {
-            background-color: #f36c21;
-        }
-
-.add-skill-button {
-    background-color: #fff;
-    color: #f36c21;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-}
-
-    .add-skill-button:hover {
-        background-color: #f36c21;
-        color: #fff;
-    }
 
 
 /* Modal */
