--- a/Resources/CSS/HomePage.css
+++ b/Resources/CSS/HomePage.css
@@ -441,3 +441,37 @@
         line-height: 1.5;
         margin-bottom: 20px;
     }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+    .modal-content .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+        .modal-content.close:hover,
+        .modal-content.close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
