--- a/MyMaster2.Master
+++ b/MyMaster2.Master
@@ -13,7 +13,7 @@
 <%-------------------------------------------------------------------------------------------------%> 
 
 <body>  
-        <form runat="server"> 
+        <%--<form runat="server">--%> 
 <%-------------------------------------------------------------------------------------------------%> 
 
  <header>
@@ -119,6 +119,6 @@
 </footer>
     
 <%-------------------------------------------------------------------------------------------------%> 
-          </form>
+          <%--</form>--%>
     </body>
 </html>
