--- a/MyMaster2.Master
+++ b/MyMaster2.Master
@@ -31,7 +31,7 @@
                           </ul>
                         </nav>
                         <div class="profile">
-                          <a href="MyProfile.aspx"><img src="https://img.icons8.com/ios-filled/100/FFFFFF/user-male-circle.png"/></a>
+                          <a href="MyProfile.aspx"><img src="Resources/Images/BG_Image/master-1.png"/></a>
                           <div class="dropdown" style="margin-left:7px;">
                             <a href="HomePage.aspx">Logout</a>
                           </div>
@@ -56,7 +56,7 @@
                       <a href="FAQs.aspx">FAQ</a>
                       <a href="Our_Services.aspx">Terms of Service</a>
 
-                      <a href="https://www.fiverr.com/privacy-policy">Privacy Policy</a>
+                      <a href="Privacy_Policy.aspx">Privacy Policy</a>
 
                       <a href="NewsFeed.aspx">Blog</a>
                       <a href="ContactUs.aspx">Contact Us</a>
@@ -106,10 +106,10 @@
                     <div class="footer-social">
                       <h4>Connect With Us</h4>
                       <div class="social-icons">
-                       <a href="https://www.facebook.com/Fiverr/"><img src="https://img.icons8.com/ios-filled/30/null/facebook-new.png" style="margin-top:5px;" /></a>
-					   <a href="https://twitter.com/fiverr"><img src="https://img.icons8.com/material-sharp/30/null/twitter.png" style="margin-top:5px;" /></a>
-					   <a href="https://www.linkedin.com/company/fiverr-com"><img src="https://img.icons8.com/ios-glyphs/30/null/linkedin.png" style="margin-top:5px;" /></a>
-					   <a href="https://www.instagram.com/fiverr/"><img src="https://img.icons8.com/ios-glyphs/30/null/instagram-new.png" style="margin-top:5px;" /></a>
+                       <a href="https://www.facebook.com/Fiverr/"><img src="Resources/Images/BG_Image/icon-1.png" style="margin-top:5px;" /></a>
+					   <a href="https://twitter.com/fiverr"><img src="Resources/Images/BG_Image/icon-2.png" style="margin-top:5px;" /></a>
+					   <a href="https://www.linkedin.com/company/fiverr-com"><img src="Resources/Images/BG_Image/icon-3.png" style="margin-top:5px;" /></a>
+					   <a href="https://www.instagram.com/fiverr/"><img src="Resources/Images/BG_Image/icon-4.png" style="margin-top:5px;" /></a>
                       </div>
                     </div>
                   </div>
