Set up email web service
For sign up, forgot password, newsletter subscription and contact team. Also set up batch file for automatically running chatAPI in background upon app start

--- a/Resources/CSS/ContactUs.css
+++ b/Resources/CSS/ContactUs.css
@@ -1,4 +1,34 @@
-﻿
+﻿.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    width: 350px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+    /* Styles for the popup heading */
+    .popup h2 {
+        margin-top: 0;
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    /* Styles for the popup message */
+    .popup p {
+        margin-bottom: 0;
+        font-size: 16px;
+    }
+
+
+
+
+
 * {
     margin: 0;
     padding: 0;
