Partial resolution of conflicts
Feedback functional
Password validation in homepage (halfway done)

--- a/MyMaster1.Master
+++ b/MyMaster1.Master
@@ -119,7 +119,7 @@
     <footer>
 	             <div class="footer-container">
                     <div class="footer-links" style="font-weight:bold">
-                      <a href="Homepage.aspx">Home</a>
+                      <h4><a href="Homepage.aspx">Home</a></h4>
                       <a href="About_Us.aspx">About Us</a>
                       <a href="How_it_works.aspx">How It Works</a>
                       <a href="https://workspace.fiverr.com/pricing/">Pricing</a>
