--- a/Resources/CSS/A_DashBoarB.css
+++ b/Resources/CSS/A_DashBoarB.css
@@ -426,3 +426,34 @@ footer {
         background-color: #45a049;
     }
 
+.ctable {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: #fefefe;
+}
+
+    .ctable th {
+        background-color: #FF4500;
+        color: #fff;
+        font-weight: bold;
+        padding: 1rem;
+        text-align: left;
+    }
+
+    .ctable td {
+        border: 1px solid #FF4500;
+        padding: 1rem;
+        color: black;
+        font-size: 1.1rem;
+        transition: background-color 0.2s ease-in-out;
+    }
+
+        .ctable td:first-child {
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+
+        .ctable td:last-child {
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+        }
