--- a/Resources/CSS/Wallet.css
+++ b/Resources/CSS/Wallet.css
@@ -54,11 +54,11 @@
 .ctable {
     border-collapse: collapse;
     width: 100%;
-    background-color: #4b4b4b;
+    background-color: #fefefe;
 }
 
     .ctable th {
-        background-color: #333;
+        background-color: #FF4500;
         color: #fff;
         font-weight: bold;
         padding: 1rem;
@@ -68,15 +68,10 @@
     .ctable td {
         border: 1px solid #FF4500;
         padding: 1rem;
-        color: #fff;
+        color: black;
         font-size: 1.1rem;
         transition: background-color 0.2s ease-in-out;
     }
-
-        .ctable td:hover {
-            background-color: #f5f5f5;
-            color: #FF4500;
-        }
 
         .ctable td:first-child {
             border-top-left-radius: 5px;
@@ -87,20 +82,6 @@
             border-top-right-radius: 5px;
             border-bottom-right-radius: 5px;
         }
-
-@media screen and (max-width: 768px) {
-    .ctable th,
-    .ctable td {
-        font-size: 0.9rem;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .ctable th,
-    .ctable td {
-        font-size: 0.8rem;
-    }
-}
 
 
 
